tests/ui/entry-point/main-with-invalid-signature.stderr
error[E0580]: `main` function has wrong type
  --> $DIR/main-with-invalid-signature.rs:3:1
   |
LL | fn main(_: &i32) {
   | ^^^^^^^^^^^^^^^^ incorrect number of function parameters
   |
   = note: expected signature `fn()`
              found signature `for<'a> fn(&'a i32)`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0580`.
